--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".DepartmentListActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,8 +17,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".DepartmentListActivity"
             android:label="@string/title_activity_department_list" >
+        </activity>
+        <activity
+            android:name=".DepartmentCourseListActivity"
+            android:label="@string/title_activity_department_course_list" >
         </activity>
     </application>
 
